Fix(header): aligne recherche et remplce span par div

--- a/style_reservia.css
+++ b/style_reservia.css
@@ -106,20 +106,18 @@ header {
 .couleur_map {
   border: #f2f2f2 solid 2px;
   border-radius: 7px 0px 0px 7px;
-  padding-top: 3px;
-  padding-right: 3px;
-  padding-bottom: 5px;
-  padding-left: 10px;
+  align-self: center;
+  padding: 4px;
+  align-items: center;
   font-size: 10px;
   background-color: #f2f2f2;
 }
 .couleur_rechercher {
   border: #0065fc solid 2px;
   border-radius: 0px 7px 7px 0px;
-  padding-top: 3px;
-  padding-bottom: 6px;
-  padding-right: 8px;
-  padding-left: 8px;
+  align-self: center;
+  padding: 4px;
+  align-items: center;
   font-size: 10px;
   background-color: #0065fc;
   margin-left: -8px;
@@ -139,9 +137,11 @@ header {
   font-size: 10px;
 }
 .border_recherche {
+  display:flex;
   margin-bottom: 9px;
   font-size: 10px;
 }
+
 .loupe {
   display: none;
 }
@@ -152,17 +152,15 @@ header {
 @media all and (max-width: 600px) {
   /* vue mobile*/
   .trouver {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 15px;
+    align-self: center;
+    padding: 4px;
+    align-items: center;
   }
   header {
     padding-left: 0;
   }
   .couleur_map {
-    padding-right: 10px;
-    padding-left: 15px;
-    padding-top: 7px;
+  padding: 6px;
   }
 
   .formulaire_recherche input {
@@ -176,13 +174,14 @@ header {
     display: none;
   }
   .couleur_rechercher {
-    padding-right: 10px;
-    padding-left: 15px;
-    padding-top: 5px;
+    padding: 6px;
     border-radius: 7px 7px 7px 7px;
   }
   .loupe {
     display: flex;
+    align-self: center;
+  padding: 4px;
+  align-items: center;
   }
   #navigation {
     grid-column-gap: 0;
